--- a/src/component/layout/index.scss
+++ b/src/component/layout/index.scss
@@ -2,7 +2,7 @@
 * @Author: Lizh
 * @Date:   2018-05-28 20:33:13
 * @Last Modified by:   Lizh
-* @Last Modified time: 2018-05-28 23:11:11
+* @Last Modified time: 2018-05-31 01:16:57
 */
 .page-header-right{
     position: absolute;
@@ -19,3 +19,13 @@
     margin-right: 5px;
     cursor: pointer;
 }
+.navbar-header{
+	position: relative;
+	span{
+		position: absolute;
+		bottom: 5px;
+		right: 8px;
+		color: white;
+		font-size: 14px;
+	}
+} 
